# metaculus-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  FUTURE.md  LICENSE  Makefile  README.md  analyze_correlations.py  backtest.py  community_benchmark.py  forecasting_tools_readme.md  main.py  main_with_no_framework.py  osv-scanner.toml  pyproject.toml  starter_guide.md  ty.toml
.github/workflows/: ci.yaml  run_bot_on_metaculus_cup.yaml  run_bot_on_minibench.yaml  run_bot_on_tournament.yaml  test_bot.yaml
metaculus_bot/: __init__.py  aggregation_pipeline.py  aggregation_strategies.py  aiohttp_cleanup.py  api_key_utils.py  bounds_clamping.py  check_openrouter_credits.py  cli.py  cluster_processing.py  comment_formatting.py  comment_markers.py  comment_trimming.py  config.py  constants.py  correlation_analysis.py  discrete_snap.py  ensemble_simulator.py  fallback_openrouter.py  fetch_hardening.py  financial_data_provider.py  forecaster.py  forecaster_runners.py  gemini_search_provider.py  llm_configs.py  llm_retry.py  llm_setup.py  mc_processing.py  numeric_config.py  numeric_diagnostics.py  numeric_format_router.py  numeric_pipeline.py  numeric_utils.py  numeric_validation.py  pchip_cdf.py  pchip_processing.py  post_processing.py  prediction_market_provider.py  prob_math_utils.py  prompts.py  publish_hardening.py  (+11 more)
metaculus_bot/ablation/: __init__.py  aggregation_primitives.py  cache.py  cli.py  env.py  forecaster_lineup.py  forecasters.py  leakage_screen.py  offline_replay.py  prune.py  qa_iterate.py  research.py  run_mean.py  run_median.py  run_pdf.py  run_simple_agg.py  run_stacker.py  scoring.py  scoring_report.py  stage_payload.py  window_patch.py
metaculus_bot/backtest/: analysis.py  leakage.py  question_prep.py  scoring.py
metaculus_bot/benchmark/: bot_factory.py  heartbeat.py  logging.py  logging_setup.py
metaculus_bot/calibration/: __init__.py  fit_platt_cli.py  params.py  platt.py
metaculus_bot/comment/: __init__.py  formatting.py  trimming.py
metaculus_bot/ensemble_analysis/: __init__.py  benchmark_identity.py  cdf_cache.py  correlation_analysis.py  ensemble_simulator.py  types.py
metaculus_bot/numeric/: __init__.py  bounds_clamping.py  cluster_processing.py  config.py  diagnostics.py  discrete_snap.py  pchip_cdf.py  (+5 more)
scripts/: backfill_research_from_comments.py  backfill_research_from_logs.py  download_research.py
tests/: conftest.py  pipeline_test_helpers.py  test_ablation_cache.py  test_ablation_cache_sandbox.py  test_ablation_cli.py  test_ablation_forecaster_lineup.py  test_ablation_forecasters.py  test_ablation_leakage_screen.py  test_ablation_prune.py  test_ablation_qa_iterate.py  test_ablation_research.py  test_ablation_run_mean.py  test_ablation_run_median.py  test_ablation_run_pdf.py  test_ablation_run_simple_agg.py  test_ablation_run_stacker.py  test_ablation_scoring.py  test_ablation_stage_payload.py  test_ablation_window_patch.py  test_aggregation.py  test_aggregation_pipeline.py  test_aggregation_strategies.py  test_aiohttp_transport_flag.py  test_analyze_correlations.py  test_api_key_utils.py  test_asknews_gating.py  test_asknews_rate_limiting.py  test_backfill_from_comments.py  test_backfill_research_parser.py  test_backtest.py  test_backtest_analysis.py  test_backtest_question_prep.py  test_backtest_scoring.py  test_binary_pooling.py  test_bot_aggregation_extras.py  test_bounds_clamping.py  test_check_openrouter_credits.py  test_cli.py  test_cluster_processing.py  test_comment_formatting.py  (+88 more)
(+35 files in other folders)
