[project]
name = "metaculus-bot"
version = "0.1.0"
description = "Multi-LLM ensemble forecasting bot for Metaculus."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Vasile Popescu", email = "elisescu@elisescu.com" }]
dependencies = [
    "requests>=2.32.3",
    "asknews>=0.11.2",
    "numpy>=2.3.0",
    "openai>=1.57.4",
    "python-dotenv>=1.0.1",
    "forecasting-tools==0.2.54", # FROZEN: depends on internal data_models.*/helpers.* paths — do not change
    "litellm>=1.59.1,<2.0.0",    # cap matches forecasting-tools constraint; litellm ships frequent behavior changes
    "aiohttp>=3.12.15",
    "yfinance>=0.2.48",
    "fredapi>=0.5.2",
    "google-genai>=1.74.0",
    "rapidfuzz>=3.14.3",
    "scipy>=1.12.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2,<3.0.0",
    "tqdm>=4.66", # imported at top level in backtest.py / community_benchmark.py
]
# supply-chain note: prefer pinning; avoid adding packages published <1wk ago.
# The freshness window is enforced at lock time via `uv lock --exclude-newer <ts>`
# (uv 0.9.x has no exclude-newer-span pyproject setting).

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.15.1",
    "basedpyright>=1.25",
    "ty",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Flat layout: the importable package lives at the repo root (metaculus_bot/),
# not under src/. uv_build's default discovery expects src/<name>/, so both
# settings are required here.
module-name = "metaculus_bot"
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
# pythonpath=["."] replaces the legacy PYTHONPATH=. env hack so tests can import
# repo-root modules (backtest, community_benchmark, analyze_correlations) and the
# scripts package once metaculus_bot is installed editable.
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live: requires real API keys and makes real LLM calls (deselected by default)",
    "e2e: end-to-end pipeline tests with mocked LLMs",
    "integration: cross-component contract tests",
]
addopts = "-m 'not live'"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["metaculus_bot"]
omit = ["*/__pycache__/*", "metaculus_bot/check_openrouter_credits.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
# Relaxed baseline across the repo; the core forecasting pipeline is promoted to
# strict via the `strict` path list below (basedpyright applies strict rules to
# any file under these paths — covers both directories and single-file modules).
typeCheckingMode = "standard"
include = [
    "metaculus_bot",
    "tests",
    "scripts",
    "main.py",
    "backtest.py",
    "community_benchmark.py",
    "analyze_correlations.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "REFERENCE_COPY_OF_*",
    "scratch",
    "scratch_docs_and_planning",
    "benchmarks",
    "backtests",
    "report",
    "build",
    "dist",
]
strict = [
    "metaculus_bot/numeric",
    "metaculus_bot/research",
    "metaculus_bot/probabilistic_tools",
    "metaculus_bot/forecaster.py",
    "metaculus_bot/aggregation_pipeline.py",
    "metaculus_bot/stacking.py",
]
